<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/navigation_drawer_trivias_subgroup">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_categories"
                        android:icon="@drawable/ic_menu_manage"
                        android:title="@string/action_list_categories" />
                    <item
                        android:id="@+id/nav_all_trivias"
                        android:icon="@drawable/ic_menu_share"
                        android:title="@string/action_list_all_trivias" />
                </group>
            </menu>
        </item>

<!--        <item android:title="@string/navigation_drawer_scores_subgroup">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_scores"
                        android:icon="@drawable/ic_menu_manage"
                        android:title="@string/action_list_scores" />
                </group>
            </menu>
        </item>-->
    </group>
</menu>